--- a/index.html
+++ b/index.html
@@ -43,28 +43,23 @@
     .field { display:flex; gap:8px; align-items:center; flex-wrap:wrap; }
     .field .spacer{ flex:1 1 auto; }
 
-    /* 可展開輸入面板（預設關閉） */
+    /* 讓輸入欄寬度依 JS 設定的 max-width，自身不硬撐整行 */
     .input-panel{ display:none; margin-top:8px; width:100%; }
     .input-panel.active{ display:block; }
     .input-panel-inner{ width:100%; display:flex; }
-
-    /* 改用 textarea：固定寬度（由 JS 鎖定 = 手牌白圈寬度），超出自動長高，最多兩行 */
-    textarea.input {
-      width:auto;              /* 真正寬度由 JS 設置 */
+    input[type=text]{
+      width:auto;                 /* 由 JS 設定 max-width，避免拉滿 */
       max-width:100%;
       box-sizing:border-box;
       min-height:44px;
-      line-height:1.4;
       background:#0b1020; color:#fff;
       border:1px solid rgba(255,255,255,.25);
       padding:10px 12px; border-radius:12px; font-size:16px; outline:none;
       -ms-touch-action: manipulation; touch-action: manipulation;
       display:block;
-      resize:none;             /* 由 JS 控制高度 */
-      overflow:auto;
     }
-    textarea.input::placeholder { color:#ffffffcc; }
-    textarea.input:focus{ border-color:#60a5fa; box-shadow:0 0 0 3px rgba(96,165,250,.28); }
+    input[type=text]::placeholder { color:#ffffffcc; }
+    input[type=text]:focus{ border-color:#60a5fa; box-shadow:0 0 0 3px rgba(96,165,250,.28); }
 
     .btn {
       background:#0d2347; border:1px solid rgba(255,255,255,.25);
@@ -76,7 +71,7 @@
     .btn:hover { border-color:#60a5fa; }
     .btn.primary{ background:linear-gradient(135deg, #2563eb, #22c55e); border:none; color:white; }
     .btn.secondary{
-      background: linear-gradient(135deg, #4b74c7, #334155); /* 藍灰 */
+      background: linear-gradient(135deg, #4b74c7, #334155);
       border:none; color:#fff;
     }
     .btn.ghost{ background:transparent; border:1px dashed rgba(255,255,255,.3); }
@@ -91,18 +86,16 @@
     .dock-row{ display:flex; gap:8px; }
     .dock .btn { flex:1; min-height:48px; font-size:16px; }
 
-    /* 自動分析上方的「修改／重新輸入」：依規則顯示 */
     .dock-aux{ display:none; }
     .dock-aux.show{ display:flex; }
 
     .toast { position:fixed; left:50%; transform:translateX(-50%); bottom:76px; background:#1f2937; color:#fff; padding:10px 14px; border-radius:12px; font-size:14px; opacity:0; pointer-events:none; transition:.25s; z-index:60; }
     .toast.show{ opacity:1; }
 
-    /* 兩頁面切換 */
     .page{ display:none; }
     .page.active{ display:block; }
 
-    /* 鍵盤：固定 10 欄 */
+    /* 鍵盤 */
     .kbd{ display:grid; grid-template-columns: repeat(10, 1fr); gap: var(--gap-small); }
     .row { margin-top:8px; }
     .key{
@@ -121,35 +114,18 @@
 
     .row-title { margin-top:8px; font-size:13px; opacity:.9; }
 
-    /* ===== 當前手牌：固定 2 行＋白圈，不截斷（可捲動） =====
-       使用 grid：左欄放標籤，右欄放牌。換行後第二行第一顆會與第一行第一顆對齊 */
+    /* 當前手牌：固定 2 行＋白圈，可滾動 */
     .hand-wrap{ scroll-margin-top:72px; }
     .hand{
-      display:grid;
-      grid-template-columns: max-content 1fr;
-      align-items:start;
-      gap:6px 8px; /* row-gap 增加，讓第二行與白圈底部距離更舒服 */
-      padding:8px 10px 14px 10px;     /* 加大底部間距 */
-      border-radius:12px;
+      display:flex; align-items:center; flex-wrap:wrap;
+      gap:4px; padding:6px 8px; border-radius:12px;
       outline:2px solid #fff; outline-offset:0; box-shadow:0 0 0 3px rgba(255,255,255,.15) inset;
       min-height: calc(2 * (var(--tile-size) * 1.35));
       max-height: calc(2 * (var(--tile-size) * 1.35));
       overflow:auto;
       background: rgba(255,255,255,.03);
     }
-    .hand-label{
-      grid-column:1;
-      align-self:start;
-      font-size:14px; opacity:.95;
-      white-space:nowrap;
-      padding-top:2px;
-    }
-    .hand-tiles{
-      grid-column:2;
-      display:flex; flex-wrap:wrap; align-items:flex-start;
-      gap:4px;
-      min-width:0;
-    }
+    .hand-label{ font-size:14px; opacity:.95; margin-right:4px; }
     .hand-btn{
       background: transparent;
       border: none;
@@ -164,15 +140,7 @@
     .hand-btn:active{ transform: scale(.96); }
     .hand-btn:focus{ outline: none; }
 
-    .hand-placeholder{
-      opacity:.75;
-      font-size:15px;
-      padding:2px 0;
-    }
-
-    /* 分析結果底部留白，避免被 Dock 遮住（用 JS 動態調整高度） */
     #resultSpacer{ height:0; }
-
     #result { font-size: var(--tile-size); line-height:1.55; white-space:pre-wrap; }
 
     .chips{ display:none !important; }
@@ -182,7 +150,6 @@
   <div class="wrap">
     <div class="container">
 
-      <!-- 頂部：標題 + 規則/返回按鈕 -->
       <div class="topbar">
         <div class="title">港式台灣麻雀分析器 · 網頁版</div>
         <div>
@@ -191,32 +158,26 @@
         </div>
       </div>
 
-      <!-- 主頁 -->
       <section id="page-main" class="page active">
         <div class="card" id="card-input">
           <div class="section-title">輸入手牌</div>
 
-          <!-- 控制列：清空（左）｜顯示輸入欄（中）｜整理（右） -->
           <div class="field" id="controlRow" style="margin-bottom:8px">
             <button class="btn sm" id="btnClearTop" type="button" title="清空輸入">清空</button>
-
             <div class="spacer"></div>
             <button class="btn sm ghost" id="btnToggleInput" type="button" aria-expanded="false" aria-controls="inputPanel">顯示輸入欄</button>
-
             <div class="spacer"></div>
             <button class="btn sm" id="btnSort" type="button" title="依鍵盤順序整理">整理</button>
           </div>
 
-          <!-- 可展開輸入面板（預設隱藏，寬度鎖定在卡片內） -->
+          <!-- 輸入面板：在這裡會把 input 實際寬度對齊到手牌白框寬度 -->
           <div id="inputPanel" class="input-panel">
             <div class="input-panel-inner">
-              <textarea id="tilesInput" class="input" rows="1"
-                inputmode="latin" autocomplete="off" autocapitalize="off" spellcheck="false"
-                placeholder="輸入牌組或使用下方牌面鍵盤"></textarea>
+              <input id="tilesInput" type="text" inputmode="latin" autocomplete="off" autocapitalize="off" spellcheck="false" placeholder="輸入牌組或使用下方牌面鍵盤" />
             </div>
           </div>
 
-          <!-- 當前手牌（固定 2 行 + 白圈/提示） -->
+          <!-- 當前手牌（固定 2 行 + 白圈） -->
           <div id="handWrap" class="hand-wrap">
             <div id="unicodeHand" class="muted" style="margin-bottom:8px"></div>
           </div>
@@ -236,7 +197,6 @@
           <div class="kbd row" id="row-z"></div>
         </div>
 
-        <!-- 分析結果 -->
         <div class="card" style="margin-top:12px">
           <div class="section-title">分析結果</div>
           <div id="result" aria-live="polite"></div>
@@ -244,7 +204,6 @@
         </div>
       </section>
 
-      <!-- 規則頁 -->
       <section id="page-rules" class="page">
         <div class="card">
           <div class="section-title">規則</div>
@@ -260,7 +219,6 @@
 
     </div>
 
-    <!-- 底部 Dock：上方是修改／重新輸入，底下是自動分析 -->
     <div class="dock" id="dock">
       <div class="dock-inner">
         <div class="dock-row dock-aux" id="dockAux">
@@ -277,29 +235,24 @@
   <div class="toast" id="toast" role="status" aria-live="polite"></div>
 
 <script>
-/* ======= Mahjong 核心 ======= */
+/* ======= Mahjong 核心（維持不變） ======= */
 const SUITS=['m','t','s']; const HONORS=['1z','2z','3z','4z','5z','6z','7z']; const JOKER='X';
 const VALID_WIN=new Set([5,8,11,14,17]); const VALID_TING=new Set([4,7,10,13,16]);
-
 const UNICODE_TILES={
   '1m':'🀇','2m':'🀈','3m':'🀉','4m':'🀊','5m':'🀋','6m':'🀌','7m':'🀍','8m':'🀎','9m':'🀏',
   '1t':'🀙','2t':'🀚','3t':'🀛','4t':'🀜','5t':'🀝','6t':'🀞','7t':'🀟','8t':'🀠','9t':'🀡',
   '1s':'🀐','2s':'🀑','3s':'🀒','4s':'🀓','5s':'🀔','6s':'🀕','7s':'🀖','8s':'🀗','9s':'🀘',
   '1z':'🀀','2z':'🀁','3z':'🀂','4z':'🀃','5z':'🀄︎','6z':'🀅','7z':'🀆','X':'🀪'
 };
-
 function formatTile(t){ return UNICODE_TILES[t]||t }
 function normalizeInput(s){ return s.normalize('NFKC').trim() }
 function validateCounts(tiles){
   const c=new Map(); for(const t of tiles){ c.set(t,(c.get(t)||0)+1) }
   for(const [t,count] of c){ if(t!=='X' && count>4) throw new Error(`牌 ${t} 數量超過4張，請檢查輸入。`) }
 }
-
-/* 解析輸入；限制最多 17 張 */
 function parseTiles(input){
   let parts=normalizeInput(input); if(!parts) return [];
   let tokens=parts.split(/\s+/).filter(Boolean);
-
   if(tokens.length===1){
     const s=tokens[0]; const out=[];
     for(let i=0;i<s.length;){
@@ -325,7 +278,6 @@ function parseTiles(input){
     if(out.length>17) throw new Error(`牌張數最多 17 張，目前為 ${out.length} 張`);
     return out;
   }
-
   const res=[];
   for(const tk of tokens){
     if(tk.toUpperCase()==='X'){ res.push('X'); if(res.length>17) throw new Error(`牌張數最多 17 張，目前已達 ${res.length} 張`); continue }
@@ -351,7 +303,6 @@ function parseTiles(input){
   if(res.length>17) throw new Error(`牌張數最多 17 張，目前為 ${res.length} 張`);
   return res;
 }
-
 function isTriplet(trio){ return trio.length===3 && trio[0]===trio[1] && trio[1]===trio[2] }
 function isSequence(trio){
   if(trio.length!==3) return false;
@@ -481,7 +432,7 @@ const btnToRules = $('#btnToRules');
 const btnBackToMain = $('#btnBackToMain');
 const dock = $('#dock');
 
-const tilesInput=$('#tilesInput');     // textarea
+const tilesInput=$('#tilesInput');
 const inputPanel=$('#inputPanel');
 const btnToggleInput=$('#btnToggleInput');
 
@@ -494,29 +445,59 @@ const dockAux=$('#dockAux');
 const btnEditFloat=$('#btnEditFloat');
 const btnReenterFloat=$('#btnReenterFloat');
 
-/* ---- 渲染「當前手牌」：永遠保留白圈；無手牌則顯示提示 ---- */
-function renderHand(arr){
-  let inner = `
-    <div class="hand">
-      <div class="hand-label">當前手牌：</div>
-      <div class="hand-tiles">
-  `;
-  if(!arr.length){
-    inner += `<span class="hand-placeholder">請輸入手牌</span>`;
-  }else{
-    arr.forEach((t,i)=>{
-      inner += `<button class="hand-btn" type="button" data-idx="${i}" aria-label="刪除 ${t}" title="刪除 ${t}">${formatTile(t)}</button>`;
-    });
+/* --- 新增：將輸入欄寬度對齊到「當前手牌」白框的最大寬度 --- */
+function syncInputWidthToHand(){
+  // 取白框 .hand，若尚未渲染則退而求其次用 unicodeHand 容器寬度
+  const handBox = unicodeHandEl.querySelector('.hand') || unicodeHandEl;
+  const w = handBox ? Math.floor(handBox.getBoundingClientRect().width) : 0;
+  if (w > 0) {
+    tilesInput.style.maxWidth = w + 'px';
+  } else {
+    tilesInput.style.maxWidth = ''; // 使用預設
   }
-  inner += `</div></div>`;
-  unicodeHandEl.innerHTML = inner;
 }
-function setUnicodeHand(arr){ renderHand(arr); lockInputWidthToHand(); }
 
-function writeTiles(arr){
-  tilesInput.value = arr.join(' ') + (arr.length ? ' ' : '');
-  autoGrowTextarea();
+/* 頁面切換 */
+function showMain(){
+  pageMain.classList.add('active'); pageRules.classList.remove('active');
+  btnBackToMain.style.display='none'; btnToRules.style.display='';
+  dock.style.display='';
 }
+function showRules(){
+  pageRules.classList.add('active'); pageMain.classList.remove('active');
+  btnBackToMain.style.display=''; btnToRules.style.display='none';
+  dock.style.display='none';
+  hideDockAux();
+}
+btnToRules.addEventListener('click', showRules);
+btnBackToMain.addEventListener('click', showMain);
+
+function setResult(t){ resultEl.textContent=t }
+
+/* 展開 / 收合輸入面板（保持在卡片內，並同步寬度） */
+btnToggleInput.addEventListener('click', ()=>{
+  const open = !inputPanel.classList.contains('active');
+  inputPanel.classList.toggle('active', open);
+  btnToggleInput.setAttribute('aria-expanded', open?'true':'false');
+  btnToggleInput.textContent = open ? '隱藏輸入欄' : '顯示輸入欄';
+  if(open && tilesInput){
+    syncInputWidthToHand();   // 展開時對齊一次
+    tilesInput.focus();
+  }
+});
+
+/* 手牌渲染 */
+function renderHandButtons(arr){
+  if(!arr.length){ unicodeHandEl.innerHTML=''; syncInputWidthToHand(); return; }
+  let html = `<div class="hand"><span class="hand-label">當前手牌：</span>`;
+  arr.forEach((t,i)=>{
+    html += `<button class="hand-btn" type="button" data-idx="${i}" aria-label="刪除 ${t}" title="刪除 ${t}">${formatTile(t)}</button>`;
+  });
+  html += '</div>';
+  unicodeHandEl.innerHTML = html;
+  syncInputWidthToHand();     // 每次手牌渲染後對齊
+}
+function setUnicodeHand(arr){ renderHandButtons(arr); }
 
 unicodeHandEl.addEventListener('pointerup', (e)=>{
   const btn = e.target.closest('.hand-btn');
@@ -534,7 +515,7 @@ unicodeHandEl.addEventListener('pointerup', (e)=>{
   }catch(_){}
 });
 
-/* ---- 計數與鍵盤狀態 ---- */
+/* 計數與鍵盤狀態 */
 const tileCounts = new Map();
 function totalCount(){ let sum = 0; for (const v of tileCounts.values()) sum += v; return sum; }
 function recountFromInput(){
@@ -554,7 +535,7 @@ function updateKeyboardState(){
   });
 }
 
-/* ---- 建鍵盤與插入 ---- */
+/* 建鍵盤與輸入插入 */
 function insertText(t){
   const cnt = (tileCounts.get(t) || 0);
   if (cnt >= 4) return;
@@ -563,7 +544,6 @@ function insertText(t){
 
   const cur=tilesInput.value;
   tilesInput.value=(cur?cur.replace(/\s+$/,'')+' ':'')+t+' ';
-  autoGrowTextarea();
   tileCounts.set(t, cnt+1);
   fireFormat();
   updateKeyboardState();
@@ -589,7 +569,7 @@ buildRow(document.getElementById('row-s'), Array.from({length:9},(_,i)=>`${i+1}s
 buildRow(document.getElementById('row-m'), Array.from({length:9},(_,i)=>`${i+1}m`));
 buildRow(document.getElementById('row-z'), [...Array.from({length:7},(_,i)=>`${i+1}z`), 'X']);
 
-/* ---- 排序（整理） ---- */
+/* 排序（整理） */
 function sortTilesByKeyboardOrder(arr){
   const suitOrder = { 't':0, 's':1, 'm':2, 'z':3, 'X':4 };
   return arr.slice().sort((a,b)=>{
@@ -615,51 +595,20 @@ document.getElementById('btnSort').addEventListener('click', ()=>{
   }
 });
 
-/* ---- 清空 ---- */
+/* 清空 */
 document.getElementById('btnClearTop').addEventListener('click',()=>{
   tilesInput.value='';
-  autoGrowTextarea();
   setUnicodeHand([]); setResult('');
   tileCounts.clear();
   updateKeyboardState();
-  updateDockAuxVisibility();
 });
 
-/* ---- 展開 / 收合輸入面板 ---- */
-btnToggleInput.addEventListener('click', ()=>{
-  const open = !inputPanel.classList.contains('active');
-  inputPanel.classList.toggle('active', open);
-  btnToggleInput.setAttribute('aria-expanded', open?'true':'false');
-  btnToggleInput.textContent = open ? '隱藏輸入欄' : '顯示輸入欄';
-  if(open){
-    lockInputWidthToHand();    // 展開瞬間鎖定寬度 = 手牌白圈寬度
-    autoGrowTextarea();        // 根據內容自動長高（最多兩行）
-    tilesInput.focus();
-  }
-});
-
-/* ---- 輸入欄寬度鎖定為手牌白圈寬度；高度自動最多兩行 ---- */
-function handBoxEl(){
-  return unicodeHandEl.querySelector('.hand') || unicodeHandEl;
-}
-function lockInputWidthToHand(){
-  const hb = handBoxEl();
-  const w = hb ? Math.floor(hb.getBoundingClientRect().width) : 0;
-  if (w > 0) {
-    tilesInput.style.width = w + 'px';   // 固定長度
-    tilesInput.style.maxWidth = w + 'px';
-  }
-}
-function autoGrowTextarea(){
-  // 重設高度後以內容撐高，最多兩行
-  const line = 44; // 約等於 min-height
-  tilesInput.style.height = 'auto';
-  const sh = tilesInput.scrollHeight;
-  const maxH = line * 2 + 6; // 兩行＋微間距
-  tilesInput.style.height = Math.min(sh, maxH) + 'px';
+/* 寫回輸入框 */
+function writeTiles(arr){
+  tilesInput.value = arr.join(' ') + (arr.length ? ' ' : '');
 }
 
-/* ---- 即時格式化 ---- */
+/* 即時格式化 */
 function fireFormat(){
   try{
     const tiles=parseTiles(tilesInput.value);
@@ -667,18 +616,16 @@ function fireFormat(){
     recountFromInput();
     updateKeyboardState();
   }catch(e){
-    // 即使格式錯誤也維持白圈與提示
-    setUnicodeHand([]);
     recountFromInput();
     updateKeyboardState();
   }
+  syncInputWidthToHand(); // 每次格式化後也對齊一次（避免字體/滾動造成寬度變化）
 }
 
-/* ---- 自動分析：完成後更新結果、顯示邏輯與底部留白 ---- */
+/* 自動分析（略，僅保留原邏輯） */
 document.getElementById('btnCheck').addEventListener('click',()=>{
   try{
     const tiles=parseTiles(tilesInput.value); const n=tiles.length; setUnicodeHand(tiles);
-
     if(VALID_TING.has(n)){
       const ting=analyzeTingTilesOnly(tiles);
       if(ting.length===0){ setResult('此牌組尚未聽牌。'); }
@@ -698,83 +645,45 @@ document.getElementById('btnCheck').addEventListener('click',()=>{
     }else{
       setResult('錯誤：牌張數不合法（小相公/大相公）。');
     }
-
     adjustResultSpacer();
-    updateDockAuxVisibility();
-    document.getElementById('result').scrollIntoView({ behavior:'smooth', block:'start' });
-
   }catch(e){
     setResult('錯誤：'+e.message);
     adjustResultSpacer();
-    updateDockAuxVisibility();
   }
 });
 
-/* ---- Dock 上方操作：修改（捲回手牌/鍵盤）、重新輸入（清空） ---- */
-btnEditFloat.addEventListener('click', ()=>{
-  document.getElementById('handWrap').scrollIntoView({ behavior:'smooth', block:'start' });
-});
-btnReenterFloat.addEventListener('click', ()=>{
-  tilesInput.value='';
-  autoGrowTextarea();
-  setUnicodeHand([]); setResult('');
-  tileCounts.clear(); updateKeyboardState();
-  adjustResultSpacer();
-  updateDockAuxVisibility();
-});
-
-/* ---- 顯示邏輯：有結果 → 控制列可見就隱藏，否則顯示（加入去抖） ---- */
-let controlRowVisible = false;
-let auxDesired = false;
-let auxTimer = null;
-const io = new IntersectionObserver(entries=>{
-  const vis = entries[0]?.isIntersecting ?? false;
-  controlRowVisible = vis;
-  auxDesired = hasResult() && !controlRowVisible;
-  // 加入 150ms 去抖，改善手機快速滑動時的顯示不順
-  if(auxTimer) cancelAnimationFrame(auxTimer);
-  const start = performance.now();
-  function tick(now){
-    if(now - start >= 150){
-      updateDockAuxVisibility(true);
-    }else{
-      auxTimer = requestAnimationFrame(tick);
-    }
-  }
-  auxTimer = requestAnimationFrame(tick);
-}, { root:null, threshold:0.2, rootMargin: "0px 0px -40% 0px" });
-io.observe(controlRow);
-
-function hasResult(){
-  return (resultEl.textContent || '').trim().length > 0;
-}
-function showDockAux(){ dockAux.classList.add('show'); }
-function hideDockAux(){ dockAux.classList.remove('show'); }
-function updateDockAuxVisibility(fromDebounce=false){
-  if(!hasResult()){ hideDockAux(); return; }
-  if(fromDebounce){
-    if(auxDesired) showDockAux(); else hideDockAux();
-  }else{
-    if(controlRowVisible) hideDockAux(); else showDockAux();
-  }
-}
-
-/* ---- 分析結果底部留白：避免被 Dock 遮住 ---- */
+/* 分析結果底部留白 */
 function adjustResultSpacer(){
   const dockHeight = dock?.offsetHeight || 0;
-  const auxShown = dockAux.classList.contains('show');
-  const extra = auxShown ? dockHeight : Math.max(dockHeight - 56, 0);
-  resultSpacer.style.height = hasResult() ? (dockHeight + extra + 16) + 'px' : '0px';
+  resultSpacer.style.height = (resultEl.textContent.trim() ? dockHeight + 16 : 0) + 'px';
 }
 
-/* ---- 輔助：吐司 ---- */
+/* 輔助：吐司 */
 function showToast(msg){
   const t=document.getElementById('toast');
   t.textContent=msg; t.classList.add('show');
   setTimeout(()=>t.classList.remove('show'),1600);
 }
 
-/* ====== 其他 ====== */
+/* 初始 */
+function init(){
+  recountFromInput();
+  updateKeyboardState();
+  fireFormat();
+  adjustResultSpacer();
+  syncInputWidthToHand();          // 首次對齊
+}
+init();
+
+/* 事件：輸入／resize 時也對齊一次 */
+let typingTimer; 
+document.getElementById('tilesInput').addEventListener('input',()=>{
+  clearTimeout(typingTimer);
+  typingTimer=setTimeout(()=>{ fireFormat(); adjustResultSpacer(); }, 120)
+});
+window.addEventListener('resize', ()=>{ syncInputWidthToHand(); });
+
+/* 其他：行為優化 */
 document.addEventListener('dblclick', (e)=>{ e.preventDefault(); }, {passive:false});
 let lastTouchEnd = 0;
 document.addEventListener('touchend', function (e) {
@@ -782,29 +691,6 @@ document.addEventListener('touchend', function (e) {
   if (now - lastTouchEnd <= 300) { e.preventDefault(); }
   lastTouchEnd = now;
 }, { passive:false });
-
-/* ---- 初始 ---- */
-function init(){
-  recountFromInput();
-  updateKeyboardState();
-  fireFormat();              // 會渲染白圈＋提示
-  adjustResultSpacer();
-  updateDockAuxVisibility();
-  lockInputWidthToHand();    // 先鎖一次，避免展開時跳動
-  autoGrowTextarea();
-}
-init();
-
-/* ---- 輸入時延遲格式化 + 自動高度 ---- */
-let typingTimer; 
-tilesInput.addEventListener('input',()=>{
-  autoGrowTextarea();
-  clearTimeout(typingTimer);
-  typingTimer=setTimeout(()=>{ fireFormat(); adjustResultSpacer(); updateDockAuxVisibility(); }, 120);
-});
-
-/* ---- 視窗大小改變時，更新底部留白與輸入欄寬度 ---- */
-window.addEventListener('resize', ()=>{ adjustResultSpacer(); updateDockAuxVisibility(); lockInputWidthToHand(); });
 </script>
 </body>
 </html>
